* Bug #43658: use full window width for notificationsdropdown on small screens and adjusted NotificationDropDownButton notifications coutner
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.2/ucs-4.2-1@81961 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-web/css/site/header.styl
+++ b/management/univention-web/css/site/header.styl
@@ -174,11 +174,11 @@ headerHeight = 48px
 
 			.notificationCountNode
 				position: absolute
-				width: 20px
-				height: 20px
+				width: 17px
+				height: 17px
 				border-radius: 50%
 				top: 8px
-				right: 12px
+				right: 15px
 				background-color: $error-color
 				display: flex
 				justify-content: center
@@ -336,7 +336,7 @@ headerHeight = 48px
 			.umcNotificationDropDownButton
 				.notificationCountNode
 					top: 7px
-					right: 11px
+					right: 14px
 					border-width: 1px
 					border-style: solid
 					background-color: white
